# Agentic-RAG-system-

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  llm.py  state.py
backend/app/agent/nodes/: answerer.py  checker.py  evaluator.py  router.py
backend/app/agent/tools/: hybrid_search.py
backend/app/api/: auth.py  chat.py  documents.py  knowledge_bases.py  skills.py
backend/app/core/: config.py  database.py  security.py  tracing.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_create_tables.py  002_indexes_and_rls.py  003_add_skills_table.py  004_chunk_created_at_and_doc_status_check.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  knowledge_base.py  message.py  skill.py  user.py
backend/app/services/: cache.py  embedding.py  ingestion.py  reranker.py
backend/app/workers/: ingestion_worker.py
backend/tests/: conftest.py
backend/tests/agent/: test_graph.py
backend/tests/agent/nodes/: test_answerer.py  test_checker.py  test_router.py
backend/tests/api/: test_auth.py  test_chat.py  test_documents.py  test_knowledge_bases.py  test_skills.py
backend/tests/core/: test_config.py  test_security.py
backend/tests/services/: test_cache.py  test_embedding.py  test_ingestion.py  test_reranker.py
frontend/: .dockerignore  Dockerfile  nginx.conf  openapi.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: dev.sh  (+3 more)
(+32 files in other folders)
